Resolves: tdf#89760 get correct menubar text color for 'close preview'

Change-Id: Ife6f2665eabeefd6125a53318404dbd7b9af42ee